<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.InstructionFragment">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/you_can_list_your_shoes_here_for_sell"
        android:textColor="@color/black_text_color"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/instruction_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/fill_all_the_details_for_your_shoes_so_that_buyer_can_know_what_to_buy"
        android:textColor="@color/black_text_color"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/instruction_next_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/next"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instruction_text" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>